feat: add tab component and style

--- a/src/containers/container.module.css
+++ b/src/containers/container.module.css
@@ -27,6 +27,9 @@
 .content .right-content {
     display: flex;
     flex: 1;
+    flex-direction: column;
+
+    padding: 0 16px;
 }
 
 .remove-object-btn {
