--- a/src/components/canvas/canvasTool.module.css
+++ b/src/components/canvas/canvasTool.module.css
@@ -150,3 +150,45 @@
 
     justify-self: end;
 }
+
+.canvas-float-tool-bar {
+    position: absolute;
+
+    left: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    width: auto;
+    padding: 8px;
+
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgb(0 0 0 / 10%);
+
+    background: #fff;
+
+    transform: translate(-50%, 50%);
+}
+
+.canvas-float-tool-bar-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    padding: 0 8px;
+}
+
+.scale-tool-btn {
+    width: 24px;
+    height: 24px;
+
+    border: none;
+
+    border-radius: 50%;
+
+    background-color: #fff;
+}
