--- a/src/components/canvas/canvasDesk.module.css
+++ b/src/components/canvas/canvasDesk.module.css
@@ -13,4 +13,13 @@
 .canvas-container {
     width: 100%;
     height: 100%;
+
+    overflow: hidden;
+}
+
+.canvas-container canvas {
+    width: 100%;
+    height: 100%;
+
+    transform-origin: center center;
 }
