--- a/src/components/placeholder/canvasPlaceholder.module.css
+++ b/src/components/placeholder/canvasPlaceholder.module.css
@@ -3,6 +3,8 @@
     justify-content: center;
     align-items: center;
 
+    box-sizing: border-box;
+
     width: 100%;
     height: 100%;
     min-height: 400px;
