--- a/src/containers/container.module.css
+++ b/src/containers/container.module.css
@@ -53,3 +53,28 @@
 
     background-color: #a415754d;
 }
+
+.error-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.error-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 48px;
+    height: 48px;
+}
+
+.error-message {
+    max-width: 640px;
+
+    font-size: 16px;
+    font-weight: 500;
+
+    text-align: center;
+}
