--- a/src/containers/container.module.css
+++ b/src/containers/container.module.css
@@ -13,6 +13,7 @@
 .content .left-content {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 16px;
 
     box-sizing: border-box;
@@ -34,6 +35,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    width: 100%;
 
     padding: 16px 24px;
 }
