--- a/src/components/canvas/canvasTool.module.css
+++ b/src/components/canvas/canvasTool.module.css
@@ -193,7 +193,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: self-end;
     gap: 8px;
 
     padding: 0 8px;
