--- a/src/FJApp.module.css
+++ b/src/FJApp.module.css
@@ -1,3 +1,12 @@
+.page {
+    display: flex;
+
+    width: 100%;
+    height: 100%;
+
+    min-height: 100vh;
+}
+
 body {
     margin: 0;
     padding: 0;
