--- a/src/components/canvas/FJCanvasDesk.module.css
+++ b/src/components/canvas/FJCanvasDesk.module.css
@@ -14,6 +14,7 @@
 }
 
 .canvas-container {
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
 
@@ -23,6 +24,7 @@
 .canvas-container canvas {
     width: 100%;
     height: 100%;
+    display: block;
 
     transform-origin: center center;
 }
