style: restrict height overflow

--- a/src/components/FJAIObjectRemover/view/FJAIObjectRemover.module.css
+++ b/src/components/FJAIObjectRemover/view/FJAIObjectRemover.module.css
@@ -2,12 +2,15 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    height: 100vh;
 }
 
 .content {
     display: flex;
     flex: 1;
     flex-direction: row;
+
+    overflow: hidden;
 }
 
 .content .left-content {
