--- a/src/components/header/FJHeader.module.css
+++ b/src/components/header/FJHeader.module.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 8px;
+    flex-shrink: 0;
 
     height: 70px;
     padding: 0 40px;
